samples/errors/003-malformed-statement.ooc

main: func {

    dog()
    dag()
    dig()
    dug()
    
    a = 3
    b = 3 + 2
    c = 5 - a
    
    a := 235
    
    ab +
    
}